# TP2-INF2705

./: .gitignore
inf2705/: OpenGLApplication.hpp  sfml_utils.hpp  utils.hpp
models/: blinker.ply  frame.ply  grass.ply  light.ply  skybox.ply  street.ply  streetcorner.ply  streetlight.ply  wheel.ply  window.f.ply  window.fl.ply  window.fr.ply  window.r.ply  window.rl.ply  window.rr.ply
src/: CMakeLists.txt  TP.sln  TP.vcxproj  TP.vcxproj.filters  car.cpp  car.hpp  imgui.ini  main.cpp  model.cpp  model.hpp  model_data.hpp  oldMain.cpp  shader_program.cpp  shaders.cpp  shaders.hpp  textures.cpp  uniform_buffer.cpp
src/shaders/: basic.fs.glsl  basic.vs.glsl  edge.fs.glsl  edge.vs.glsl  phong.fs.glsl  phong.vs.glsl  sky.fs.glsl  sky.vs.glsl  transform.fs.glsl  transform.vs.glsl
tp2/models/: pine.ply  streetlight_light.ply
tp2/src/: car.cpp  car.hpp  main.cpp  model.cpp  model.hpp  shader_program.hpp  textures.cpp  textures.hpp  uniform_buffer.hpp
tp2/src/shaders/: edge.vs.glsl  phong.fs.glsl  sky.fs.glsl
